--- a/_posts/2014-04-16-MEPG2 初探(PSI，SI的解析).md
+++ b/_posts/2014-04-16-MEPG2 初探(PSI，SI的解析).md
@@ -1,3 +1,12 @@
+---
+layout: post
+title: "MEPG2 初探"
+description: "MEPG2 初探(PSI，SI的解析)"
+category: MEPG2
+tags: []
+---
+{% include JB/setup %}
+
 ## MEPG2 初探(PSI，SI的解析) ##
 
 ###首先介绍下MEPG2###
