--- a/_posts/2012-08-31-post.md
+++ b/_posts/2012-08-31-post.md
@@ -1,14 +1,13 @@
+
 ---
 layout: post
 title: "hdu 4006"
 description: "hdu 4006 第K大数"
 category: 优先队列 第k大数
 tags: []
----
 
-##hdu 4006 第K大数 ##
-
-#####这题题意:要求第K大数，那么我们只保留前K个大数,按降序排列。这也就是说每加入一个数就找到这个数的位置,然后将大于K个元素之外的数删除。#####
+hdu 4006 第K大数
+#####这题题意:要求第K大数，那么我们只保留前K个大数,按降序排列。这也就是说每加入一个数就找到这个数的位置,然后将大于K个元素之外的数删除。
 
 ### 
 	#include<iostream>
