--- a/_posts/2014-04-16-MEPG2 初探(PSI，SI的解析).md
+++ b/_posts/2014-04-16-MEPG2 初探(PSI，SI的解析).md
@@ -15,13 +15,13 @@ tags: []
 在MPEG-2标准中，有两种不同类型的码流输出到信道：一种是**节目码流(PS ，Program Stream)**,,适用于没有误差产生的信道传送，比如我们要说的DVB存储介质。另一种是**传送流（TS Transport Stream）**适于有**信道噪声产生的传输，适用于远距离传送**。这里我们议论的是**TS**。.
 
 ###TS结构###
-![ts header](http://i.imgur.com/sTSoDk2.png)
+![ts header](/static/blog/img/ts_header.png)
 
 包头包括***同步字节，1b传送包差错指示，1b的净荷单元起始指示，1b传送有限权，13b的包标示符PID，2b的传送加扰控制，2b调整字段控制盒 4b的连续计数器**。这里暂时不对这些作详细分析了
 
-![ts tid](http://192.168.233.128:8090/static/blog/img/ts_pid.png)
+![ts tid](/static/blog/img/ts_pid.png)
 
-![ts pid](http://192.168.233.128:8090/static/blog/img/ts_tid.png)
+![ts pid](/static/blog/img/ts_tid.png)
 
 通过上面2张图我们可以得出这样一个结论，为了区分不同的表，必须要有标识符或者不同的结构
 
@@ -33,7 +33,7 @@ tags: []
 
 但是仔细一看，发现PMT没有指定PID，那怎么找呢？通过**PAT，PAT是节目关联表**，它有相应的PMT的信息
 
-![ts pmt](http://192.168.233.128:8090/static/blog/img/ts_pmt.png)
+![ts pmt](/static/blog/img/ts_pmt.png)
 
 PAT的结构中当**program\_number 不为0**时,就可以得到**program\_map\_PID,这就是PMT的PID**。显然PMT不止一个。得到了PMT的PID和已知的table\_id 得到PMT已水到渠成.相应的**NIT,CAT都有固定的PID和table\_id**,用相同的方法就可以找到。
 
